--- a/R_D_NOAA Backup.Rmd
+++ b/R_D_NOAA Backup.Rmd
@@ -190,7 +190,6 @@ g2 <- ggplot(pl, aes(x=reorder(EVTYPE, -TOTLDMG), y=format(TOTLDMG, scientific =
 This chart shows the top 10 most economically damaging events, from most to least. The Flood is the most costly and the Ice Storm is the least.
 
 ```{r timeseries, include= TRUE, echo= TRUE}
-
 tmEvent <- repdata[which(is.na(repdata$BGN_DATE) == FALSE),]
 tmEvent$BGN_DATE <-  as.Date(tmEvent$BGN_DATE, format = "%m/%d/%Y")
 
@@ -218,7 +217,7 @@ tmEventFtlInj <- merge(tmEventAg,tmEventInj, by = "BGN_DATE")
 mtext("Fatalities and Injuries", side=3, outer=TRUE, line=-1, col = "blue") 
 #dev.off()
 
-tmEventFtlInj[order(tmEventFtlInj$BGN_DATE, decreasing = TRUE),]
+#tmEventFtlInj[order(tmEventFtlInj$BGN_DATE, decreasing = TRUE),]
 ```
 
 
